--- a/praktisk.html
+++ b/praktisk.html
@@ -26,9 +26,7 @@
         <div id="rutaformeddelande"></div>
 
         <div class="praktiskUppgift">Länk till den teoretiska uppgiften finns uppe i menyn. :)<br><br>
-            För skojs skull valde jag även att göra en liten knapp som ändrar mellan ljust och mörkt läge, längst upp i högra hörnet, men eftersom windows har limiteringar för hur dokumenten får hämta information ifrån varandra så fungerar den bara på index-sidan, om hemsidan öppnas lokalt på en dator. <br>
-            Om den startas via en server så fungerar funktionen så att den byter på alla sidor, och de är alla synkade.<br>
-            Jag bestämde mig därför för att ladda upp den på ett gratis webhotell, så om du vill kan du kolla där för att se sidan fungera fullt ut.</div>
+            På den här uppladdade versionen fungerar knappen längst upp i höger som den ska! 
         
     </body>
 </html>
